--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -140,8 +140,10 @@ h1 {
 
 .homeForm form input,
 .homeForm form select {
+  -webkit-box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
+          box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
   color: black;
-  background-color: #eeeeee;
+  background-color: white;
   padding: 8px;
   margin-left: 5px;
   margin-bottom: 30px;
