--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -153,8 +153,10 @@ h1 {
 
   form input,
   form select {
+    box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px,
+      rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
     color: black;
-    background-color: $ws-bg;
+    background-color: rgb(255, 255, 255);
     padding: 8px;
     margin-left: 5px;
     margin-bottom: 30px;
