--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -63,11 +63,9 @@ html {
 }
 
 body {
-  background-image: linear-gradient(
-      100deg,
+  background-image: linear-gradient(100deg,
       rgba(0, 0, 0, 0.65),
-      rgba(0, 0, 0, 0.8)
-    ),
+      rgba(0, 0, 0, 0.8)),
     url("../unsplash-bg.jpg");
   background-size: cover;
   background-position: center center;
@@ -390,6 +388,7 @@ footer {
 
 /*-------------------- Media Queries --------------------*/
 @media screen and (max-width: 492px) {
+
   .homeForm,
   .dots,
   .cardContainer {
@@ -413,6 +412,8 @@ footer {
 
 @media screen and (max-width: 375px) {
   .homeForm {
+    height: 100%;
+
     form {
       padding: 10px;
       margin: 30px auto;
@@ -460,6 +461,7 @@ footer {
 
 @media screen and (max-width: 300px) {
   .homeForm {
+
     form {
       width: 270px;
     }
@@ -496,32 +498,32 @@ footer {
   }
 }
 
-@media screen and (max-width: 375px) and (max-height: 760px) {
-  .homeForm {
-    height: 100%;
+// @media screen and (max-width: 375px) and (max-height: 760px) {
+//   .homeForm {
+//     height: 100%;
 
-    form {
-      margin: 50px auto;
-    }
-  }
+//     form {
+//       margin: 50px auto;
+//     }
+//   }
 
-  .cardContainer {
-    height: 100%;
-  }
-}
+//   .cardContainer {
+//     height: 100%;
+//   }
+// }
 
-@media screen and (max-width: 667px) and (max-height: 375px) {
-  .homeForm {
-    height: 100%;
+// @media screen and (max-width: 667px) and (max-height: 375px) {
+//   .homeForm {
+//     height: 100%;
 
-    form {
-      margin: 50px auto;
-    }
-  }
+//     form {
+//       margin: 50px auto;
+//     }
+//   }
 
-  .cardContainer {
-    .cards {
-      margin: 50px auto;
-    }
-  }
-}
+//   .cardContainer {
+//     .cards {
+//       margin: 50px auto;
+//     }
+//   }
+// }
