--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -24,7 +24,7 @@ $light-orange: rgb(236, 104, 55);
 }
 
 @mixin cardsContainer {
-  height: calc(100vh - 105px);
+  min-height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -260,7 +260,7 @@ h1 {
 
 /*-------------------- ShowResults.tsx --------------------*/
 .resContainer {
-  min-height: calc(100vh - 105px);
+  min-height: 100vh;
   background-color: rgba(106, 147, 167, 0.2);
   color: rgb(255, 255, 255);
 
@@ -288,7 +288,7 @@ h1 {
   }
 
   .ansContainer {
-    padding: 0 25px 20px;
+    margin: 0 25px 16px;
 
     .eachDiv {
       margin-bottom: 30px;
@@ -359,15 +359,6 @@ h1 {
 }
 
 /*-------------------- Media Queries --------------------*/
-@media screen and (max-width: 492px) {
-
-  .homeForm,
-  .dots,
-  .cardContainer {
-    height: calc(100vh - 132px);
-  }
-}
-
 @media screen and (max-width: 425px) {
   .homeForm {
     form {
@@ -384,8 +375,6 @@ h1 {
 
 @media screen and (max-width: 375px) {
   .homeForm {
-    height: 100%;
-
     form {
       padding: 10px;
       margin: 30px auto;
@@ -394,8 +383,6 @@ h1 {
   }
 
   .cardContainer {
-    height: 100%;
-
     .cards {
       margin: 30px auto;
       width: 320px;
@@ -404,11 +391,8 @@ h1 {
 
   .resContainer {
     .ansContainer {
-      padding: 0 10px 20px;
-
       .eachDiv {
         .oneLine {
-
           .anyResBtn,
           .correctResBtn,
           .wrongResBtn {
@@ -436,7 +420,6 @@ h1 {
 
 @media screen and (max-width: 300px) {
   .homeForm {
-
     form {
       width: 270px;
     }
@@ -472,33 +455,3 @@ h1 {
     }
   }
 }
-
-// @media screen and (max-width: 375px) and (max-height: 760px) {
-//   .homeForm {
-//     height: 100%;
-
-//     form {
-//       margin: 50px auto;
-//     }
-//   }
-
-//   .cardContainer {
-//     height: 100%;
-//   }
-// }
-
-// @media screen and (max-width: 667px) and (max-height: 375px) {
-//   .homeForm {
-//     height: 100%;
-
-//     form {
-//       margin: 50px auto;
-//     }
-//   }
-
-//   .cardContainer {
-//     .cards {
-//       margin: 50px auto;
-//     }
-//   }
-// }
