--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -297,10 +297,10 @@ h1 {
   }
 
   .ansContainer {
-    margin: 0 25px 16px;
+    padding: 0 25px 16px;
 
     .eachDiv {
-      margin-bottom: 30px;
+      padding-bottom: 30px;
 
       .oneLine {
         p {
