--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -75,7 +75,7 @@ body {
   background-image: linear-gradient(100deg,
       rgba(0, 0, 0, 0.65),
       rgba(0, 0, 0, 0.8)),
-    url("../unsplash-bg.jpg");
+    url("../unsplash-bg.jpeg");
   background-size: cover;
   background-position: center center;
   background-attachment: fixed;
